wrap bug fix(mobile)

--- a/source/css/_partial/dark-theme.styl
+++ b/source/css/_partial/dark-theme.styl
@@ -6,6 +6,8 @@ DM-font-color = #aaa
 .dark-theme
     body
         background-color: DM-black
+    #wrap
+        background-color: DM-black
     .widget
         background-color: DM-grey
         color: DM-font-color
