--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -63,6 +63,7 @@ body
   left: 0
   transition: 0.2s ease-out
   z-index: 1
+  background-color: #eee
   .mobile-nav-on &
     left: mobile-nav-width
 
